--- a/Website files/css/style.css
+++ b/Website files/css/style.css
@@ -132,12 +132,12 @@ Containers
 	height: 75%;
 	background-color: #000;
 	position: relative;
-
+	margin-bottom: -10%;
 }
 .divider-4 {
 	width: 100%;
-	height: 50%;
-	background-color: #111;
+	height: 20%;
+	background-color: #000;
 	position: relative;
 }
 .row-1 { 
@@ -253,6 +253,16 @@ hr {
 	line-height: 150%;
 	text-align: left;
 }
+.copywrite {
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	color: #fff;
+	font-size: 12px; 
+	letter-spacing: 1%;
+	line-height: 150%;
+	text-align: center;
+	padding-top: 20%;
+}
 .para-right {
 	font-family: "Source Sans Pro";
 	font-weight: 100;
@@ -272,7 +282,7 @@ hr {
 	font-size: 20px;
 	background-color: #000;
 	position: absolute;
-    top: 50%;
+	top: 50%;
 	left: 50%;
 	margin-right: -50%;
 	transform: translate(-50%, -50%);
@@ -305,4 +315,340 @@ Images
 	-ms-animation: fadein 4s; 
 	-o-animation: fadein 4s; 
 	animation: fadein 4s;
+}
+
+
+
+
+
+
+/*
+===========================================
+MEDIA 800px;
+===========================================
+*/
+
+
+
+@media (max-width: 800px) {
+/*
+==============================================
+Universal
+==============================================
+*/
+* {
+	padding: 0;
+	margin: 0;
+}
+body {
+	background-color: #000;
+}
+@keyframes fadein {
+	from { opacity: 0; }
+	to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+	from { opacity: 0; }
+	to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+	from { opacity: 0; }
+	to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+	from { opacity: 0; }
+	to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+	from { opacity: 0; }
+	to   { opacity: 1; }
+}
+
+/*
+==============================================
+Navigation
+==============================================
+*/
+.nav {
+	padding-right: 10px;
+	padding-bottom: 30px;
+	width: 100%;
+	margin: auto;
+	-webkit-animation: fadein 4s; 
+	-moz-animation: fadein 4s;
+	-ms-animation: fadein 4s; 
+	-o-animation: fadein 4s; 
+	animation: fadein 4s;
+}
+.navbar {
+	width: 100%;
+	height: 120px;
+	position: fixed;
+	z-index: 1000;
+	padding-bottom: 30px;
+	margin: auto;
+}
+.navbar-list {
+	z-index: 1000;
+	list-style: none;
+	font-family: "Source Sans Pro";
+}
+.navbar-item {
+	z-index: 1000;
+	padding-right: 70px;
+	padding-top: 35px;
+	margin: auto;
+}
+.navbar-item a:hover {
+	z-index: 1000;
+	text-decoration: none;
+	border-bottom: .3em solid #f16d07;
+	padding-bottom: .3em;
+}
+.current {
+	border-bottom: .3em solid #f16d07;
+	padding-bottom: .3em;
+	transition: border-bottom 0.15s;
+	transition: padding-bottom 0.2s;
+}
+.navbar-item a {
+	z-index: 1000;
+	text-align: center;
+	text-decoration: none;
+	color: #ddd;
+	font-weight: 100;
+	font-family: "Source Sans Pro";
+}
+/*
+==============================================
+Containers
+==============================================
+*/
+.top {
+	width: 100%;
+	height: 100%;
+	opacity: 1;
+}
+.divider-1 {
+	width: 100%;
+	height: 80%;
+	background-color: #000;
+	position: absolute;
+}
+.divider-row {
+	width: 100%;
+	height: 30%;
+	background-color: #ddd;
+	position: relative;
+	margin-top: 40.4%;
+}
+.divider-row-2 {
+	width: 100%;
+	height: 30%;
+	background-color: #ddd;
+	position: relative;
+}
+.divider-2 {
+	width: 100%;
+	height: 75%;
+	background-color: #000;
+	position: relative;
+}
+.divider-3 {
+	width: 100%;
+	height: 75%;
+	background-color: #000;
+	position: relative;
+	margin-bottom: -10%;
+}
+.divider-4 {
+	width: 100%;
+	height: 20%;
+	background-color: #000;
+	position: relative;
+}
+.row-1 { 
+	float: left; 
+	width: 25%; 
+	padding-left: 7%;
+}
+.row-3 {
+	float: right; 
+	width: 25%; 
+	padding-right: 7%;
+}
+.row-2 {
+	display: inline-block; 
+	width: 25%; 
+	padding-left: 6%;
+}
+.title-div {
+	width: 50%;
+	margin: auto;
+}
+.input {
+	width: 125%;
+	margin-bottom: 2%;
+	margin: auto;
+}
+.contact-right {
+	float: right;
+}
+/*
+==============================================
+typography
+==============================================
+*/
+.title {
+	width: 100%;
+	max-width: 500px;
+	font-size: 106px;
+	line-height: 142px;
+	font-weight: 200;
+	color: #fff;
+	font-family: "Source Sans Pro";
+	letter-spacing: -1px;
+	margin: auto;
+	text-align: center;
+	position: absolute;
+	top: 35%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	z-index: 1;
+	-webkit-animation: fadein 8s; 
+	-moz-animation: fadein 8s;
+	-ms-animation: fadein 8s; 
+	-o-animation: fadein 8s; 
+	animation: fadein 8s;
+}
+.subtitle {
+	z-index: 1;
+	width: 100%;
+	max-width: 7000px;
+	font-size: 24px;
+	padding-top: 5%;
+	font-weight: 100;
+	color: #fff;
+	font-family: "Source Sans Pro";
+	letter-spacing: 1px;
+	margin: auto;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+	text-decoration: none;
+}
+.row-title {
+	z-index: 1;
+	width: 100%;
+	max-width: 7000px;
+	font-size: 42px;
+	font-weight: 100;
+	color: #fff;
+	font-family: "Source Sans Pro";
+	text-align: center;
+	padding-top: 5%;
+}
+hr {
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	display: block;
+	height: 1px;
+	border: 0;
+	border-top: 1px solid #fff;
+	margin: 1em 0;
+	padding: 0; 
+}
+.para {
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	color: #fff;
+	font-size: 18px; 
+	letter-spacing: 1%;
+	line-height: 150%;
+	text-align: center;
+}
+.para-left {
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	color: #fff;
+	font-size: 18px; 
+	letter-spacing: 1%;
+	line-height: 150%;
+	text-align: left;
+}
+.copywrite {
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	color: #fff;
+	font-size: 12px; 
+	letter-spacing: 1%;
+	line-height: 150%;
+	text-align: center;
+	padding-top: 20%;
+}
+.para-right {
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	color: #fff;
+	font-size: 24px; 
+	letter-spacing: 1%;
+	line-height: 150%;
+	text-align: right;
+}
+.learnmore {
+	border: 2px solid #ddd;
+	padding: 2%;
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+	color: #ddd;
+	text-decoration: none;
+	font-size: 20px;
+	background-color: #000;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-right: -50%;
+	transform: translate(-50%, -50%);
+}
+.learnmore:hover {
+	color: #000;
+	background-color: #ddd;
+	transition: background-color 1.5s;
+}
+label {
+	color: #ddd;
+	font-family: "Source Sans Pro";
+	font-weight: 100;
+}
+/*
+==============================================
+Images
+==============================================
+*/
+.background {
+	z-index: -1;
+	width: 100%;
+	-webkit-filter: blur(2px);
+	-moz-filter: blur(2px);
+	-o-filter: blur(2px);
+	-ms-filter: blur(2px);
+	filter: blur(2px); 
+	-webkit-animation: fadein 4s; 
+	-moz-animation: fadein 4s;
+	-ms-animation: fadein 4s; 
+	-o-animation: fadein 4s; 
+	animation: fadein 4s;
+}
 }
